--- a/views/usuario/index.ejs
+++ b/views/usuario/index.ejs
@@ -20,31 +20,41 @@
 				</thead>
 				<tbody class="text-center" >
 					<% usuarios.forEach(u => {; %>
-					<tr>
-						<th scope="row"><%=u.id%></th>
-						<td><%=u.nombre%></td>
-						<td><%=u.pass%></td>
-						<td>
-							<!-- <div class="row"> -->
-
-								<div class="col mx-0">
+						<tr>
+							<th scope="row"><%=u.id%></th>
+							<td><%=u.nombre%></td>
+							<td><%=u.pass%></td>
+							<td>
+								<div class="row text-center">
 									
-									<a href="/usuario/edit/<%=u.id%>" class="btn btn-primary">Editar</a>
-								</div>
-								<div class="col">
-									<form action="/usuario/delete/<%=u.id%>" method="delete">
+									
+									<div class="col-4 mx-auto">
 										
-										<button action="submit" class="btn btn-danger" >Borar</button>
-										<!-- <a href="/usuario/delete/<%#u.id%>"</a></a></a> class="btn btn-danger">Borrar</a> -->
-									</form>
+										<a href="/usuario/edit/<%=u.id%>" class="btn btn-primary">Editar</a>
+									</div>
+									<div class="col-4 mx-auto">
+										
+										<form action="/usuario/delete/<%=u.id%>" method="post">
+											<button action="submit" class="btn btn-danger">Borrar</button>
+										</form>
+									</div>
 								</div>
-							<!-- </div> -->
-						</td>
-					</tr>
-					<%});%>
-				</tbody>
-			</table>
+							</td>
+						</tr>
+						<%});%>
+					</tbody>
+				</table>
+				
+				<div class="text-center">
+					
+					<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalCreate">
+						Agregar
+					</button>
+				</div>
+				
+			</div>
+			<%- include('modalCreate'); %> 
+			
 		</div>
 	</div>
-</div>
-<%- include('../layouts/footer'); %>
+	<%- include('../layouts/footer'); %>
