Listo validacion y crear. Iniciando Editar

--- a/views/usuario/index.ejs
+++ b/views/usuario/index.ejs
@@ -19,7 +19,7 @@
 					</tr>
 				</thead>
 				<tbody class="text-center" >
-					<% usuarios.forEach(u => {; %>
+					<% usuarios.forEach(u => { %>
 						<tr>
 							<th scope="row"><%=u.id%></th>
 							<td><%=u.nombre%></td>
@@ -53,7 +53,7 @@
 				</div>
 				
 			</div>
-			<%- include('modalCreate'); %> 
+			<%- include('modal'); %> 
 			
 		</div>
 	</div>
