--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -1,10 +1,13 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="/css/bootstrap.min.css" rel="stylesheet">
 
-    <title>CRUD - <%=titulo%></title>
-  </head>
-  <body>
+  
+  <title>CRUD - <%=titulo%></title>
+</head>
+<body>
+  <script src="/js/bootstrap.bundle.min.js"></script>
+  <script src="/js/jquery-2.2.4.min.js"></script>
